add JVM